--- a/templates/admin_template/add_course_template.html
+++ b/templates/admin_template/add_course_template.html
@@ -175,11 +175,11 @@
                                         <label class="form-label">Date:  </label>
                                         <select name="date" class="form-select">
                                             <option selected>Choose the Date</option>
-                                            <option value="1">M</option>
-                                            <option value="2">T</option>
-                                            <option value="3">W</option>
-                                            <option value="4">Th</option>
-                                            <option value="5">F</option>
+                                            <option value="M">M</option>
+                                            <option value="T">T</option>
+                                            <option value="W3">W</option>
+                                            <option value="Th">Th</option>
+                                            <option value="F">F</option>
                                         </select>
                                     </div>
                                 </div>
