--- a/templates/admin_template/edit_course_template.html
+++ b/templates/admin_template/edit_course_template.html
@@ -40,13 +40,13 @@
                                     <div class="col-3 mb-3">
                                         <label class="form-label">Instructor:  </label>
                                         <select name="instructor" class="form-select">
-                                            <option value="lee">Lee</option>
-                                            <option value="don">Don</option>
-                                            <option value="alex">alex</option>
-                                            <option value="peggy">Peggy</option>
-                                            <option value="betty">Betty</option>
-                                            <option value="peter">peter</option>
-                                            <option value="alicia">alicia</option>
+                                            <option value="1">Lee</option>
+                                            <option value="2">Don</option>
+                                            <option value="3">alex</option>
+                                            <option value="4">Peggy</option>
+                                            <option value="5">Betty</option>
+                                            <option value="6">peter</option>
+                                            <option value="7">alicia</option>
                                         </select>
                                     </div>
                                 </div>
@@ -103,13 +103,13 @@
                                         <label class="form-label">Department ID:  </label>
                                         <select name="department" class="form-select">
                                             <option selected>Choose the department ID</option>
-                                            <option value="computerscience">1 Computer Science</option>
-                                            <option value="informatics">2 Informatics</option>
-                                            <option value="datascience">3 Data Science</option>
-                                            <option value="dataanalytics">4 Data Analytics</option>
-                                            <option value="informationsystem">5 Information System</option>
-                                            <option value="quantitativefinance">6 Quantitative Finance</option>
-                                            <option value="softwereengineering">7 Softwere Engineering</option>
+                                            <option value="1">1 Computer Science</option>
+                                            <option value="2">2 Informatics</option>
+                                            <option value="3">3 Data Science</option>
+                                            <option value="4">4 Data Analytics</option>
+                                            <option value="5">5 Information System</option>
+                                            <option value="6">6 Quantitative Finance</option>
+                                            <option value="7">7 Softwere Engineering</option>
                                         </select>
                                     </div>
                                 </div>
@@ -175,11 +175,11 @@
                                         <label class="form-label">Date</label>
                                         <select name="date" class="form-select">
                                             <option selected>Choose the Date</option>
-                                            <option value="1">M</option>
-                                            <option value="2">T</option>
-                                            <option value="3">W</option>
-                                            <option value="4">Th</option>
-                                            <option value="5">F</option>
+                                            <option value="M">M</option>
+                                            <option value="T">T</option>
+                                            <option value="W">W</option>
+                                            <option value="Th">Th</option>
+                                            <option value="F">F</option>
                                         </select>
                                     </div>
                                 </div>
